[package]
name = "lab"
version = "0.1.0"
edition = "2021"

[dependencies]
value = { path = "../value" }
dimension = { path = "../dimension" }
formulas = { path = "../formulas" }
matriz = { path = "../matriz" }
unk_tools = { path = "../unk_tools" }
compare = { path = "../compare" }
dev_tests = { path = "../dev_tests" }
array_maker = { path = "../array_maker" }